--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
